--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "spotify-web-api-js": "^1.5.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
