--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -1,57 +1,43 @@
-name: Deploy to Google Cloud Run
-
+name: Build and deploy to GCP
 on:
     push:
         branches:
-            - habib
-
+            - main
+    workflow_dispatch:
 jobs:
-    deploy:
-        name: Build and Deploy to Cloud Run
+    build:
         runs-on: ubuntu-latest
-
+        env:
+            IMAGE_URL: ${{ secrets.GCP_REGION}}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID}}/wander-wise:${{ github.sha }}
         steps:
-            # Step 1: Check out the repository
-            - name: Checkout repository
-              uses: actions/checkout@v3
-
-            # Step 2: Set up JDK for Maven build
-            - name: Set up JDK 17
-              uses: actions/setup-java@v3
+            - uses: actions/checkout@v3
+            - id: "auth"
+              name: Authenticate GCP
+              uses: google-github-actions/auth@v1
               with:
-                  java-version: 17
-                  distribution: temurin
-
-            # Step 3: Build the Spring Boot JAR using Maven
-            - name: Build with Maven
-              run: mvn clean package -DskipTests
-              working-directory: ./backend
-
-            # Step 4: Set up Google Cloud SDK
-            - name: Set up Google Cloud SDK
+                  credentials_json: "${{ secrets.GCLOUD_SERVICE_KEY }}"
+            - name: Set up Cloud SDK
               uses: google-github-actions/setup-gcloud@v1
+            - name: Use gcloud CLI
+              run: gcloud info
+            - name: Configure docker
+              run: gcloud auth configure-docker europe-north1-docker.pkg.dev
+            - name: Docker Build
+              run: >
+                  docker build --no-cache -t ${{ env.IMAGE_URL }} 
+                  ./backend -f ./backend/Dockerfile 
+                  --build-arg DB_USERNAME=${{ secrets.DB_USERNAME }} 
+                  --build-arg DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+                  --build-arg DB_URL=${{ secrets.DB_URL }}
+            - name: Docker Push
+              run: docker push $IMAGE_URL
+            - name: Update Cloud Run service
+              uses: google-github-actions/deploy-cloudrun@v1
               with:
-                  service_account_key: ${{ secrets.GCLOUD_SERVICE_KEY }}
-                  project_id: ${{ secrets.GCP_PROJECT_ID }}
-
-            # Step 5: Authenticate Docker
-            - name: Authenticate Docker
-              run: |
-                  gcloud auth configure-docker
-
-            # Step 6: Build and push Docker image to GCR
-            - name: Build and push Docker image
-              run: |
-                  IMAGE_NAME=gcr.io/${{ secrets.GCP_PROJECT_ID }}/backend:latest
-                  docker build -t $IMAGE_NAME ./backend
-                  docker push $IMAGE_NAME
-
-            # Step 7: Deploy to Google Cloud Run
-            - name: Deploy to Cloud Run
-              run: |
-                  gcloud run deploy wanderwise-backend \
-                    --image=gcr.io/${{ secrets.GCP_PROJECT_ID }}/backend:latest \
-                    --region=${{ secrets.GCP_REGION }} \
-                    --platform=managed \
-                    --allow-unauthenticated \
-                    --set-env-vars=DB_URL=${{ secrets.DB_URL }},DB_USERNAME=${{ secrets.DB_USERNAME }},DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+                  env_vars: |-
+                      DB_URL=${{secrets.DB_URL}}
+                      DB_USERNAME=${{secrets.DB_USERNAME}}
+                      DB_PASSWORD=${{secrets.DB_PASSWORD}}
+                  region: ${{ secrets.GCP_REGION}}
+                  service: WanderWiseBackend
+                  image: ${{ env.IMAGE_URL }}
