--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -2,7 +2,7 @@ name: Build and deploy to GCP
 on:
     push:
         branches:
-            - main
+            - habib
     workflow_dispatch:
 jobs:
     build:
