changed the branch to habib

--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -3,7 +3,7 @@ name: Build and deploy to GCP
 on:
     push:
         branches:
-            - main
+            - habib
     workflow_dispatch:
 
 jobs:
