--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -36,6 +36,12 @@
 			<version>2.2.0</version> <!-- Check for the latest version -->
 		</dependency>
 		<dependency>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>dotenv-java</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
