--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
+    "react-toastify": "^10.0.6",
     "spotify-web-api-js": "^1.5.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
