--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,5 +6,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.cloud.gcp.credentials.location=file:src/main/resources/cloudstorage.json
-gcs.bucket=wonder_wise_bucket
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
