--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -2,14 +2,17 @@ version: '3.8'
 
 services:
   postgres:
-    image: 'postgres:15'
-    container_name: 'wander-wise-postgres'
+    image: postgres:15
+    container_name: wanderwise-postgres
     environment:
       POSTGRES_USER: wanderwise
       POSTGRES_PASSWORD: secret
-      POSTGRES_DB: wanderwise-db
-    volumes:
-      - ./data/pgdata:/var/lib/postgresql/data
+      POSTGRES_DB: wanderwise_db
     ports:
-      - 5432:5432
+      - "5432:5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
     restart: always
+
+volumes:
+  postgres-data:
